--- a/doc/天地图切片地图矢量化.md
+++ b/doc/天地图切片地图矢量化.md
@@ -22,15 +22,15 @@
 
 
 
-![1556415488860](E:\PycharmProjects\ocv\doc\assets\1556415488860.png)
+![1556415488860](./assets/1556415488860.png)
 
 
 
 
 
 - 下图为直接用原始图进行的一个重分类以及自动矢量化
-  - 具体参数![1556415695444](E:\PycharmProjects\ocv\doc\assets\1556415695444.png) 
-  - 自动矢量化结果![1556415655748](E:\PycharmProjects\ocv\doc\assets\1556415655748.png)
+  - 具体参数![1556415695444](./assets/1556415695444.png) 
+  - 自动矢量化结果![1556415655748](./assets/1556415655748.png)
 
 根据结果来说此图得到的线段并不是最终我想要的。所以需要进一步操作。可能是我参数没有调整正确
 
@@ -40,9 +40,9 @@
 
 - 直接使用 Raster to Polygon 栅格转面
 
-![1556417146213](E:\PycharmProjects\ocv\doc\assets\1556417146213.png)
+![1556417146213](./assets/1556417146213.png)
 
-![1556417134469](E:\PycharmProjects\ocv\doc\assets\1556417134469.png)
+![1556417134469](./assets/1556417134469.png)
 
 
 
@@ -77,12 +77,12 @@ if __name__ == '__main__':
 ```
 
 - 结果集
-![](assets/edges.jpg)
+![](./assets/edges.jpg)
 
 
 
 
 
 - 在上图基础上在进行**方案1**中的操作
-![](assets/001.svg)
+![](./assets/001.svg)
 在这个成果中数据类型是LineString, 没有做到很好的闭合, 还是需要人为的去做封闭操作。如果有更好的思路可在[issues](https://github.com/wt1187982580/tianditu-python/issues) 中告诉我
