--- a/doc/天地图切片下载优化.md
+++ b/doc/天地图切片下载优化.md
@@ -14,7 +14,7 @@
 
 上述代码不能正常运行
 
-![1557107365840](C:\Users\wangtao\Documents\assets\1557107365840.png)
+![1557107365840](./assets/1557107365840.png)
 
 所以对这个代码进行重构
 
@@ -59,7 +59,7 @@ if __name__ == '__main__':
 
 - 下图中，蓝色空心圆为输入点，左侧是完整的天地图切片，右侧是计算结果，可以发现点落在右侧图片中，所以认为这个算法是正确的
 
-![1557107550925](C:\Users\wangtao\Documents\assets\1557107550925.png)
+![1557107550925](./assets/1557107550925.png)
 
 
 
